finish design redo

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="container">
             <h1>Sriram <span>Vasudevan</span></h1>
             <div class="socials">
-                <a href=""><img src="static/mail.svg" alt=""></a>
-                <a href=""><img src="static/discord.svg" alt=""></a>
-                <a href=""><img src="static/github.svg" alt=""></a>
-                <a href=""><img id="linkedin" src="static/linkedin.svg" alt=""></a>
+                <a href="mailto:srriram2002.31@gmail.com" target="_blank"><img src="static/mail.svg" alt=""></a>
+                <a href="https://discordapp.com/users/576274954367139850" target="_blank"><img src="static/discord.svg" alt=""></a>
+                <a href="https://github.com/Sriram-bb63" target="_blank"><img src="static/github.svg" alt=""></a>
+                <a href="https://www.linkedin.com/in/sriram-vasudevan-0812/" target="_blank"><img id="linkedin" src="static/linkedin.svg" alt=""></a>
             </div>
         </div>
         <a href="#second-section" id="down-arrow"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
@@ -45,7 +45,7 @@
         <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
         <div class="skills">
             <div class="left">
-                <p><span class="mono">Python</span> is the main language I code in, its versatility being the principal reason. I can design and build websites using my frontend skills (<span class="mono">HTML</span>, <span class="mono">CSS</span> and <span class="mono">SASS/SCSS</span>) and I can convert static websites into web applications using <span class="mono">Flask</span>. I have also worked with <span class="mono">MariaDB</span> and <span class="mono">SQLite</span> in the past. During my internship at Samsung, I gained experience in data handling and data visualization using libraries like <span class="mono">NumPy</span>, <span class="mono">pandas</span> and <span class="mono">Matplotlib</span>. I am capable of creating machine learning models using the <span class="mono">scikit-learn</span> library. I am comfortable with <span class="mono">git</span> and <span class="mono">GitHub</span>, <span class="mono">Linux terminal</span> and other <span class="mono">CLIs</span>. I have knowledge on <span class="mono">DSA</span> and I can implement various algorithms in other languages like <span class="mono">C</span> and <span class="mono">C++</span> too.</p>
+                <p><span class="mono">Python</span> is the main language I code in, its versatility being the principal reason. I can design and build websites using my frontend skills (<span class="mono">HTML</span>, <span class="mono">CSS</span> and <span class="mono">SASS/SCSS</span>) and I can convert static websites into web applications using <span class="mono">Flask</span>. I have also worked with both <span class="mono">SQL</span> and <span class="mono">NoSQL</span> databases in the past. During my internship, I gained experience in data processing and data visualization using libraries like <span class="mono">NumPy</span>, <span class="mono">pandas</span> and <span class="mono">Matplotlib</span>. I am capable of creating machine learning models using the <span class="mono">scikit-learn</span> library. I am comfortable with <span class="mono">git</span> and <span class="mono">GitHub</span>, <span class="mono">Linux terminal</span> and other <span class="mono">CLIs</span>.
             </div>
             <div class="right">
                 <h1>Skills and experience</h1>
