added hover effect

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="static/profile-icon.svg">
     <link rel="stylesheet" href="style.css">
     <title>Siram Vasudevan</title>
+    <script src="https://kit.fontawesome.com/b764b5c55c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -14,10 +15,10 @@
         <div class="container">
             <h1>Sriram <span>Vasudevan</span></h1>
             <div class="socials">
-                <a href="mailto:srriram2002.31@gmail.com" target="_blank"><img src="static/mail.svg" alt=""></a>
-                <a href="https://discordapp.com/users/576274954367139850" target="_blank"><img src="static/discord.svg" alt=""></a>
-                <a href="https://github.com/Sriram-bb63" target="_blank"><img src="static/github.svg" alt=""></a>
-                <a href="https://www.linkedin.com/in/sriram-vasudevan-0812/" target="_blank"><img id="linkedin" src="static/linkedin.svg" alt=""></a>
+                <a class="icons" href="mailto:srriram2002.31@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-2x i-icons"></i> </a>
+                <a class="icons" href="https://discordapp.com/users/576274954367139850" target="_blank"><i class="fa-brands fa-discord fa-2x i-icons"></i></a>
+                <a class="icons" href="https://github.com/Sriram-bb63" target="_blank"><i class="fa-brands fa-github fa-2x i-icons"></i></a>
+                <a class="icons" href="https://www.linkedin.com/in/sriram-vasudevan-0812/" target="_blank"><i class="fa-brands fa-linkedin fa-2x i-icons"></i></a>
             </div>
         </div>
         <a href="#second-section" id="down-arrow"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
