--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
             <div class="in">
                 <p>Hello world&#128075;</p>
                 <p>
-                    I am pursuing my UG degree in Computer Science and Engineering with specialization in Artificial Intelligence (2020-24)
-                    at Sathyabama Insititute of Science and Technology, Chennai, India. I am interested in
-                    machine learning and data science. I convert my ideas into working applications
-                    from time to time. I am looking forward to diversify my skills and work on industry level
-                    projects. I want to keep learning, challenge myself and do interesting things that matter.
+                    I am an under graduate with a degree in computer science and engineering with specialization in artificial engineering. 
+                    I do automation with python/robot framework with a dash of machine learning for a living. 
+                    I convert my ideas into working applications from time to time. 
+                    I want to keep learning, challenge myself and do interesting things that matter.
                     You can find my résumé <a href="static/resume/Sriram Vasudevan resume.pdf" download="Sriram Vasudevan resume">here</a>.
                 </p>
             </div>
@@ -46,7 +45,8 @@
         <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
         <div class="skills">
             <div class="left">
-                <p><span class="mono">Python</span> is the main language I code in, its versatility being the principal reason. I can design using <span class="mono">Figma</span> and build websites with my frontend skills (<span class="mono">HTML</span>, <span class="mono">CSS</span> and <span class="mono">SASS/SCSS</span>) and I can convert static websites into web applications using <span class="mono">Flask</span>. I have also worked with both <span class="mono">SQL</span> and <span class="mono">NoSQL</span> databases in the past. During my internship, I gained experience in data processing and data visualization using libraries like <span class="mono">NumPy</span>, <span class="mono">pandas</span> and <span class="mono">Matplotlib</span>. I am capable of creating machine learning models using the <span class="mono">scikit-learn</span> library. I am comfortable with <span class="mono">git</span> and <span class="mono">GitHub</span>, <span class="mono">Linux terminal</span> and other <span class="mono">CLIs</span>.
+                <!-- <p><span class="mono">Python</span> is the main language I code in, its versatility being the principal reason. I can design using <span class="mono">Figma</span> and build websites with my frontend skills (<span class="mono">HTML</span>, <span class="mono">CSS</span> and <span class="mono">SASS/SCSS</span>) and I can convert static websites into web applications using <span class="mono">Flask</span>. I have also worked with both <span class="mono">SQL</span> and <span class="mono">NoSQL</span> databases in the past. During my internship, I gained experience in data processing and data visualization using libraries like <span class="mono">NumPy</span>, <span class="mono">pandas</span> and <span class="mono">Matplotlib</span>. I am capable of creating machine learning models using the <span class="mono">scikit-learn</span> library. I am comfortable with <span class="mono">git</span> and <span class="mono">GitHub</span>, <span class="mono">Linux terminal</span> and other <span class="mono">CLIs</span>.-->
+                <p>Python is my go-to programming language. I have applied it across various domains, including machine learning, deep learning, UI automation, networks, OS processes, and computer vision etc. I can develop web applications and APIs using Flask and FastAPI. My experience includes data processing and visualization with pandas, Matplotlib, and seaborn, as well as creating interactive applications with Streamlit. I am proficient in working with REST APIs, version control systems like git and GitHub, and managing virtual environments. Additionally, I have experience with Docker for containerization and AWS for cloud services.</p>
             </div>
             <div class="right">
                 <h1>Skills and experience</h1>
@@ -66,7 +66,7 @@
 
     <footer>
         <div class="left">
-            <p>Copyright © 2022</p>
+            <p>Copyright © 2025</p>
         </div>
         <div class="right">
             <p>Designed and built by</p>
